--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,38 @@
+@import "utilities.css";
+
 :root {
     --primary : #F2C0DD;
     --light : #FCFFEB;
     --dark : #25092E;
+}
+
+body {
+     font-family: "neighbor", sans-serif;
+}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+header {
+    background: var(--primary);
+    border: 2px solid var(--dark);
+}
+
+.container {
+    max-width: 1152;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+header nav {
+    padding: 2rem 0;
+}
+
+.btn {
+    padding: 5rem 5rem;
+    font-family: "neighbor", sans-serif;
+    font-weight: 700;
+    font-style: normal;
 }
