--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,6 @@ header {
 }
 
 .container {
-    max-width: 1152px;
     padding: 0 15px;
     margin: 0 auto;
 }
@@ -57,9 +56,15 @@ header nav {
     border-bottom: 3px solid var(--dark);
     border-left: 3px solid var(--dark);
     border-right: 3px solid var(--dark);
+    padding-left: 600px;
+    padding-right: 600px;
+    padding-top: 50px;
+    padding-bottom: 100px;
 }
 
-
+/* .hero .left {
+    padding-left: 450px;
+} */
 
 .hero .left h1 {
     color: var(--dark);
