--- a/css/style.css
+++ b/css/style.css
@@ -23,14 +23,13 @@ header {
 
 .container {
     padding: 0 15px;
-    padding-left: 600px;
-    padding-right: 600px;
+    padding-left: 200px;
+    padding-right: 200px;
     margin: 0 auto;
 }
 
 header nav .right a {
     color: var(--dark);
-    margin-right: 2rem;
     text-decoration: none;
     font-family: "neighbor", sans-serif;
     font-weight: 700;
@@ -58,8 +57,8 @@ header nav {
     border-bottom: 3px solid var(--dark);
     border-left: 3px solid var(--dark);
     border-right: 3px solid var(--dark);
-    padding-left: 600px;
-    padding-right: 600px;
+    padding-left: 200px;
+    padding-right: 200px;
     padding-top: 50px;
     padding-bottom: 100px;
 }
@@ -112,17 +111,24 @@ header nav {
 }
 
 .interests .interestscontents {
-    align-items: center;
+    display: flex;
+    justify-content: center;
 }
 
 .interests .left {
+    width: 960px;
+    max-height: 730px;
     background: var(--light);
     border: 3px solid var(--dark);
+    padding: 50px;
 }
 
 .interests .right {
+    width: 960px;
+    max-height: 730px;
     background: var(--light);
     border: 3px solid var(--dark);
+    padding: 50px;
 }
 
 .interests .left .taeyeonright h1 {
