--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ html {
     scroll-behavior: smooth;
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 body {
      font-family: "neighbor", sans-serif;
 }
@@ -241,6 +245,92 @@ body {
 
 }
 
+@media (max-width: 1630px) {
+    body #main-nav {
+        display: none;
+        
+    }
+
+    body #about {
+        padding-left: 120px;
+        padding-right: 120px;
+    }
+}
+
+.site-main-wrapper {
+    position: relative;
+}
+
+.site-main-wrapper .burger {
+    position: absolute;
+    top: 40px;
+    right: 40px;
+    z-index: 11;
+}
+
+.site-main-wrapper .burger button {
+    background: none;
+    border: none;
+    outline: none;
+}
+
+.site-main-wrapper .burger button img {
+    width: 50px;
+}
+
+.mobile-nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: var(--primary);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    transform: translateX(-100%);
+    transition: all 0.5s ease-in-out;
+    z-index: 11;
+}
+
+.close {
+    position: fixed;
+    top: 40px;
+    right: 100px;
+    background: none;
+    border: none;
+    outline: none;
+}
+
+.open {
+    transform: translateX(0);
+}
+
+.close img {
+    width: 50px;
+}
+
+.mobile-nav ul {
+    list-style-type: none;
+    text-align: center;
+    padding-top: 60px;
+}
+
+.mobile-nav ul li a {
+    font-family: "neighbor", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 46px;
+    color: var(--dark);
+    text-decoration: none;
+}
+
+.mobile-nav ul li {
+    margin: 4rem;
+}
+
+
+
+
 
 /* .contact .container {
     display: flex;
@@ -265,12 +355,6 @@ body {
     background: var(--dark);
     border: 3px solid var(--light);
 } */
-
-
-
-
-
-
 
 /* 
 .contact .container .right {
