--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ body {
     justify-content: center;
 }
 
-.interests .left {
+.interests .interestscontents .left {
     width: 960px;
     max-height: 730px;
     background: var(--light);
@@ -142,7 +142,7 @@ body {
     padding: 50px;
 }
 
-.interests .right {
+.interests .interestscontents .right {
     width: 960px;
     max-height: 730px;
     background: var(--light);
@@ -150,7 +150,7 @@ body {
     padding: 50px;
 }
 
-.interests .left .taeyeonright h1 {
+.interests .interestscontents .left .taeyeonright h1 {
     font-family: "neighbor", sans-serif;
     font-weight: 400;
     font-style: italic;
@@ -158,7 +158,7 @@ body {
     color: var(--dark);
 }
 
-.interests .right .wizardingleft h1 {
+.interests .interestscontents .right .wizardingleft h1 {
     font-family: "neighbor", sans-serif;
     font-weight: 400;
     font-style: italic;
@@ -166,7 +166,7 @@ body {
     color: var(--dark);
 }
 
-.interests .left .taeyeonright p {
+.interests .interestscontents .left .taeyeonright p {
     font-family: "neighbor", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -174,7 +174,7 @@ body {
     color: var(--dark);
 }
 
-.interests .right .wizardingleft p {
+.interests .interestscontents .right .wizardingleft p {
     font-family: "neighbor", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -245,27 +245,16 @@ body {
 
 }
 
-@media (max-width: 1630px) {
-    body #main-nav {
-        display: none;
-        
-    }
-
-    body #about {
-        padding-left: 120px;
-        padding-right: 120px;
-    }
-}
-
 .site-main-wrapper {
     position: relative;
 }
 
 .site-main-wrapper .burger {
     position: absolute;
-    top: 40px;
+    top: 30px;
     right: 40px;
     z-index: 11;
+    display: none;
 }
 
 .site-main-wrapper .burger button {
@@ -287,15 +276,15 @@ body {
     height: 100%;
     display: flex;
     justify-content: center;
-    transform: translateX(-100%);
-    transition: all 0.5s ease-in-out;
+    transform: translateX(200%);
+    transition: all .8s ease-in-out;
     z-index: 11;
 }
 
 .close {
     position: fixed;
-    top: 40px;
-    right: 100px;
+    top: 30px;
+    right: 40px;
     background: none;
     border: none;
     outline: none;
@@ -328,9 +317,169 @@ body {
     margin: 4rem;
 }
 
+@media (max-width: 1630px) {
+    body #main-nav {
+        display: none;
+        
+    }
 
+    .site-main-wrapper .burger {
+        display: block;
+    }
+/* 
+    body #about {
+        padding-left: 120px;
+        padding-right: 120px;
+    } */
 
+    /* .about .right img {
+        width: 518px;
+    } */
 
+    /* .about .left img {
+        width: 268px;
+    }
+    .about .left h1 {
+        font-size: 46px;
+    }
+
+    .about .left p {
+        font-size: 20px;
+    } */
+}
+
+@media (max-width: 414px) {
+    .about {
+        flex-direction: column-reverse;
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+
+     .about .right img {
+        width: 298px;
+        padding-top: 40px;
+    }
+
+    .about .left img {
+        width: 202px;
+    }
+
+    .about .left h1 {
+        font-size: 38px;
+    }
+
+    .about .left p {
+        font-size: 20px;
+    }
+
+    .interests .myinterests {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+
+    .interests .myinterests h1 {
+        font-size: 40px;
+    }
+
+    .interests .interestscontents {
+        flex-direction: column;
+    }
+
+    .interests .interestscontents .left {
+        width: 414px;
+        max-height: 592px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        background: var(--light);
+    }
+
+    .interests .interestscontents .left img {
+        width: 177px;
+        padding-bottom: 30px;
+    }
+
+    .interests .interestscontents .left .taeyeonright h1 {
+        font-size: 55px;
+        text-align: center;
+    }
+
+    .interests .interestscontents .left .taeyeonright p {
+        font-size: 18px;
+        text-align: center;
+        margin-top: -6%;
+    }
+
+    .interests .interestscontents .right {
+        width: 414px;
+        max-height: 692px;
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        background: var(--light);
+    }
+
+    .interests .interestscontents .right img {
+        width: 220px;
+        padding-bottom: 30px;
+    }
+
+    .interests .interestscontents .right .wizardingleft h1 {
+        font-size: 55px;
+        text-align: center;
+    }
+
+    .interests .interestscontents .right .wizardingleft p {
+        font-size: 18px;
+        text-align: center;
+        margin-top: -6%;
+    }
+
+    .contact .contactme {
+        padding-left: 40px;
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+    
+    .contact .contactme h1 {
+        font-size: 40px;
+    }
+    
+    .contact .contactme p {
+        font-size: 26px;
+    }
+
+    .contact .contactcontents {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .contact .contactcontents .left {
+        max-width: 414px;
+        max-height: 74px;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .contact .contactcontents .right {
+        max-width: 414px;
+        max-height: 74px;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .contact .contactcontents .left h1 {
+        font-size: 18px;
+    }
+
+    .contact .contactcontents .right h1 {
+        font-size: 18px;
+    }
+}    
 
 /* .contact .container {
     display: flex;
